# whyyoulying

./: .gitignore  ASSUMED_BREACH_THREAT_MODEL.md  BACKLOG.md  CLAUDE.md  Cargo.toml  PROOF_OF_ARTIFACTS.md  README.md  TIMELINE_OF_INVENTION.md  USER_STORY_ANALYSIS.md
.cursor/rules/: ai-slop.mdc  anti-patterns.mdc  ci-pipeline.mdc  git-github.mdc  kova.mdc  test-binary.mdc  triple-sims.mdc
android/: build-android.sh  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/org/cochranblock/whyyoulying/: MainActivity.java
android/app/src/main/res/values/: styles.xml
docs/: TINY_AI_OPPORTUNITIES.md  TRIPLE_SIMS_ARCH.md  TRIPLE_SIMS_STAT.md  TRIPLE_SIMS_WHYYOULYING.md  compression_map.md  protocol_map.md
fixtures/: billing_records.json  contracts.json
govdocs/: ACCESSIBILITY.md  CMMC.md  FEDERAL_USE_CASES.md  FIPS.md  FedRAMP_NOTES.md  ITAR_EAR.md  PRIVACY.md  SBOM.md  SECURITY.md  SSDF.md  SUPPLY_CHAIN.md
scripts/: build-all-targets.sh
src/: android_jni.rs  config.rs  data.rs  demo.rs  lib.rs  main.rs  tests.rs  types.rs  util.rs
src/detect/: duplicate.rs  ghost.rs  labor.rs  mod.rs  rate_escalation.rs  subcontractor.rs  time.rs
src/export/: mod.rs
tests/: integration.rs
