[package]
name = "whyyoulying"
version = "0.1.0"
edition = "2021"
default-run = "whyyoulying"
description = "Proactive detection of Labor Category Fraud and Ghost Billing"
license = "Unlicense"
repository = "https://github.com/gotemcoach/whyyoulying"

[features]
default = []
tests = ["exopack", "dep:tokio"]

[lib]
name = "whyyoulying"
path = "src/lib.rs"

[[bin]]
name = "whyyoulying"
path = "src/main.rs"

[[bin]]
name = "whyyoulying-test"
path = "src/bin/whyyoulying-test.rs"
required-features = ["tests"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.0"
exopack = { path = "../exopack", optional = true, features = ["triple_sims"] }
tokio = { version = "1", features = ["rt", "macros"], optional = true }

[profile.release]
lto = true
strip = true
panic = "abort"
