[package]
name = "whyyoulying"
version = "0.2.0"
edition = "2024"
default-run = "whyyoulying"
description = "Proactive detection of Labor Category Fraud and Ghost Billing"
license = "Unlicense"
homepage = "https://cochranblock.org"
repository = "https://github.com/gotemcoach/whyyoulying"
authors = ["GotEmCoach", "KOVA"]
readme = "README.md"
keywords = ["fraud-detection", "dod", "labor-category", "ghost-billing", "inspector-general"]
categories = ["command-line-utilities"]

[features]
default = []
tests = ["exopack", "dep:tokio"]

[lib]
name = "whyyoulying"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "whyyoulying"
path = "src/main.rs"

[[bin]]
name = "whyyoulying-test"
path = "src/bin/whyyoulying-test.rs"
required-features = ["tests"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tempfile = "3"
exopack = { version = "0.1", git = "https://github.com/cochranblock/exopack", optional = true, features = ["triple_sims"] }
tokio = { version = "1", features = ["full"], optional = true }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
